crates/vize_croquis/src/virtual_ts/snapshots/vize_croquis__virtual_ts__tests__extracts_generic_from_scope_chain.snap
---
source: crates/vize_croquis/src/virtual_ts/mod.rs
expression: output.content.as_str()
---
// Virtual TypeScript for Vue SFC type checking
// Generated by vize_croquis

type $Vue = import('vue');

// Module-level imports

// Setup scope (function)
async function __setup<T, U extends T>() {
  // Compiler macros (setup-scope only, actual functions not declare)
  type __EmitFn<T> = T extends (...args: any[]) => any ? T : (<K extends keyof T>(event: K, ...args: T[K] extends any[] ? T[K] : any[]) => void);
  type __RuntimePropCtor<T> = T extends readonly (infer U)[] ? __RuntimePropCtor<U> : T extends { type: infer U } ? __RuntimePropCtor<U> : T extends StringConstructor ? string : T extends NumberConstructor ? number : T extends BooleanConstructor ? boolean : T extends ArrayConstructor ? unknown[] : T extends ObjectConstructor ? Record<string, unknown> : T extends DateConstructor ? Date : T extends FunctionConstructor ? (...args: any[]) => any : unknown;
  type __RuntimePropShape<T extends Record<string, any>> = { [K in keyof T]: T[K] extends { required: true } ? __RuntimePropCtor<T[K]> : __RuntimePropCtor<T[K]> | undefined; };
  type __RuntimeEmitShape<T extends Record<string, any>> = { [K in keyof T]: T[K] extends (...args: infer A) => any ? A : T[K] extends any[] ? T[K] : any[]; };
  function defineProps<T>(): T { return undefined as unknown as T; }
  function defineProps<T extends readonly string[]>(props: T): { [K in T[number]]?: any } { return undefined as unknown as { [K in T[number]]?: any }; }
  function defineProps<T extends Record<string, any>>(props: T): __RuntimePropShape<T> { return undefined as unknown as __RuntimePropShape<T>; }
  function defineEmits<T>(): __EmitFn<T> { return undefined as unknown as __EmitFn<T>; }
  function defineEmits<T extends readonly string[]>(events: T): (event: T[number], ...args: any[]) => void { return (() => {}) as any; }
  function defineEmits<T extends Record<string, any>>(events: T): __EmitFn<__RuntimeEmitShape<T>> { return undefined as unknown as __EmitFn<__RuntimeEmitShape<T>>; }
  function defineExpose<T>(exposed?: T): void { }
  function defineOptions<T>(options: T): void { }
  function defineSlots<T>(): T { return undefined as unknown as T; }
  function defineModel<T>(): $Vue['ModelRef']<T | undefined> { return undefined as unknown as $Vue['ModelRef']<T | undefined>; }
  function defineModel<T>(options: { required?: boolean, default?: T }): $Vue['ModelRef']<T> { return undefined as unknown as $Vue['ModelRef']<T>; }
  function defineModel<T>(name: string, options?: { required?: boolean, default?: T }): $Vue['ModelRef']<T> { return undefined as unknown as $Vue['ModelRef']<T>; }
  function withDefaults<T, D extends Partial<T>>(props: T, defaults: D): T & D { return undefined as unknown as T & D; }
  const $event: Event = undefined as unknown as Event;
  function useTemplateRef<T = any>(key: string): $Vue['ShallowRef']<T | null> { return undefined as unknown as $Vue['ShallowRef']<T | null>; }
  
  // User setup code
  const x = 1;
}

// Invoke setup
__setup();
