crates/vize_croquis/src/virtual_ts/snapshots/vize_croquis__virtual_ts__tests__generate_with_croquis.snap
---
source: crates/vize_croquis/src/virtual_ts/mod.rs
expression: output.content.as_str()
---
// Virtual TypeScript for Vue SFC type checking
// Generated by vize_croquis

type $Vue = import('vue');

// Module-level imports
import { ref } from 'vue'

// Setup scope (function)
function __setup<T extends string>() {
  // Compiler macros (setup-scope only, actual functions not declare)
  type __EmitShape<T> = T extends (...args: any[]) => any ? T : T extends Record<string, any> ? { [K in keyof T]: T[K] extends (...args: infer A) => any ? A : T[K] extends any[] ? T[K] : any[]; } : Record<string, any[]>;
  type __EmitArgs<T, K extends keyof T> = T[K] extends any[] ? T[K] : any[];
  type __EmitFn<T> = __EmitShape<T> extends (...args: any[]) => any ? __EmitShape<T> : (<K extends keyof __EmitShape<T>>(event: K, ...args: __EmitArgs<__EmitShape<T>, K>) => void);
  type __RuntimePropCtor<T> = T extends readonly (infer U)[] ? __RuntimePropCtor<U> : T extends { type: infer U } ? __RuntimePropCtor<U> : T extends StringConstructor ? string : T extends NumberConstructor ? number : T extends BooleanConstructor ? boolean : T extends ArrayConstructor ? unknown[] : T extends ObjectConstructor ? Record<string, unknown> : T extends DateConstructor ? Date : T extends FunctionConstructor ? (...args: any[]) => any : unknown;
  type __RuntimePropResolved<T> = T extends { required: true } ? true : T extends { default: any } ? true : false;
  type __RuntimePropShape<T extends Record<string, any>> = { [K in keyof T]: __RuntimePropResolved<T[K]> extends true ? __RuntimePropCtor<T[K]> : __RuntimePropCtor<T[K]> | undefined; };
  type __RuntimeEmitShape<T extends Record<string, any>> = { [K in keyof T]: T[K] extends (...args: infer A) => any ? A : T[K] extends any[] ? T[K] : any[]; };
  type __DefaultFactory<T> = (props: any) => T;
  type __WithDefaultValue<T> = T | __DefaultFactory<T>;
  type __WithDefaultsArgs<T> = { [K in keyof T]?: __WithDefaultValue<T[K]> };
  type __WithDefaultsResult<T, D extends __WithDefaultsArgs<T>> = Omit<T, keyof D> & { [K in keyof D & keyof T]-?: T[K] };
  function defineProps<T>(): T { return undefined as unknown as T; }
  function defineProps<const T extends readonly string[]>(props: T): { [K in T[number]]?: any } { return undefined as unknown as { [K in T[number]]?: any }; }
  function defineProps<const T extends Record<string, any>>(props: T): __RuntimePropShape<T> { return undefined as unknown as __RuntimePropShape<T>; }
  function defineEmits<T>(): __EmitFn<T> { return undefined as unknown as __EmitFn<T>; }
  function defineEmits<const T extends readonly string[]>(events: T): (event: T[number], ...args: any[]) => void { return (() => {}) as any; }
  function defineEmits<const T extends Record<string, any>>(events: T): __EmitFn<__RuntimeEmitShape<T>> { return undefined as unknown as __EmitFn<__RuntimeEmitShape<T>>; }
  function defineExpose<T>(exposed?: T): void { }
  function defineOptions<T>(options: T): void { }
  function defineSlots<T>(): T { return undefined as unknown as T; }
  function defineModel<T>(): $Vue['ModelRef']<T | undefined> { return undefined as unknown as $Vue['ModelRef']<T | undefined>; }
  function defineModel<T>(options: { required?: boolean, default?: T }): $Vue['ModelRef']<T> { return undefined as unknown as $Vue['ModelRef']<T>; }
  function defineModel<T>(name: string, options?: { required?: boolean, default?: T }): $Vue['ModelRef']<T> { return undefined as unknown as $Vue['ModelRef']<T>; }
  function withDefaults<T, D extends __WithDefaultsArgs<T>>(props: T, defaults: D): __WithDefaultsResult<T, D> { return undefined as unknown as __WithDefaultsResult<T, D>; }
  const $event: Event = undefined as unknown as Event;
  function useTemplateRef<T = any>(key: string): $Vue['ShallowRef']<T | null> { return undefined as unknown as $Vue['ShallowRef']<T | null>; }
  type __Props = <{ name: string }>;
  
  // User setup code
  
  const props = defineProps<{ name: string }>()
  const count = ref(0)
}

// Invoke setup
__setup();
